--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/game_popup.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/game_popup.xml
@@ -33,7 +33,7 @@
 
     <RadioGroup
         android:id="@+id/modeRadio"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:maxWidth="320dp"
