--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/activity_splash.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/activity_splash.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:lottie_rawRes="@raw/charge" />
+        app:lottie_rawRes="@raw/charge"
+        android:background="@color/white"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
