--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/fragment_data_word.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/fragment_data_word.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     style="@style/primary_grad"
     android:orientation="vertical"
-    tools:context=".ui.fragments.ProfileFragment">
+    tools:context=".ui.fragments.data.DataProfileFragment">
 
 
     <TextView
@@ -53,13 +53,13 @@
             <EditText
                 android:id="@+id/name"
                 style="@style/edit_text"
+                android:minHeight="48dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:autofillHints="name"
                 android:hint="@string/nombre"
-                android:inputType="textShortMessage"
-                android:textColor="@color/textPrimary" />
+                android:inputType="textShortMessage" />
         </RelativeLayout>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -68,7 +68,7 @@
         android:paddingHorizontal="10dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_weight="1">
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,6 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal"
                 android:baselineAligned="false">
                 <RelativeLayout
@@ -101,19 +102,21 @@
 
                     <EditText
                         android:id="@+id/def0"
+                        android:minHeight="48dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:hint="@string/definici_n_1"
                         style="@style/edit_text"
                         android:autofillHints="name"
-                        android:inputType="textLongMessage"/>
+                        android:inputType="textMultiLine"/>
                 </RelativeLayout>
             </androidx.appcompat.widget.LinearLayoutCompat>
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal"
                 android:baselineAligned="false">
                 <RelativeLayout
@@ -139,19 +142,21 @@
                     <EditText
                         android:id="@+id/def1"
                         style="@style/edit_text"
+                        android:minHeight="48dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:autofillHints="name"
                         android:fontFamily="sans-serif-black"
                         android:hint="@string/definici_n_2"
-                        android:inputType="textLongMessage" />
+                        android:inputType="textMultiLine" />
                 </RelativeLayout>
             </androidx.appcompat.widget.LinearLayoutCompat>
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal"
                 android:baselineAligned="false">
                 <RelativeLayout
@@ -177,19 +182,21 @@
                     <EditText
                         android:id="@+id/def2"
                         style="@style/edit_text"
+                        android:minHeight="48dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:autofillHints="name"
                         android:fontFamily="sans-serif-black"
                         android:hint="@string/definici_n_3"
-                        android:inputType="textLongMessage" />
+                        android:inputType="textMultiLine" />
                 </RelativeLayout>
             </androidx.appcompat.widget.LinearLayoutCompat>
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal"
                 android:baselineAligned="false">
                 <RelativeLayout
@@ -217,17 +224,19 @@
                         style="@style/edit_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:minHeight="48dp"
                         android:layout_centerInParent="true"
                         android:autofillHints="name"
                         android:fontFamily="sans-serif-black"
                         android:hint="@string/definici_n_4"
-                        android:inputType="textLongMessage" />
+                        android:inputType="textMultiLine" />
                 </RelativeLayout>
             </androidx.appcompat.widget.LinearLayoutCompat>
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:layout_marginBottom="10dp"
                 android:orientation="horizontal"
                 android:baselineAligned="false">
                 <RelativeLayout
@@ -237,12 +246,12 @@
                     tools:ignore="NestedWeights">
 
                     <TextView
+                        style="@style/text_view_extra"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="@string/definci_n"
                         android:textAlignment="center"
-                        style="@style/text_view_extra"
                         tools:ignore="NestedWeights" />
                 </RelativeLayout>
                 <RelativeLayout
@@ -252,14 +261,15 @@
 
                     <EditText
                         android:id="@+id/def4"
-                        style="@style/text_view_secondTitle"
+                        style="@style/edit_text"
+                        android:minHeight="48dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:autofillHints="name"
                         android:fontFamily="sans-serif-black"
                         android:hint="@string/definici_5"
-                        android:inputType="textLongMessage" />
+                        android:inputType="textMultiLine" />
                 </RelativeLayout>
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -277,7 +287,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:fontFamily="sans-serif-condensed"
-            android:text="@string/diccionario"/>
+            android:text="@string/diccionario" />
     </RelativeLayout>
 
     <include layout="@layout/words_bottom_bar" android:id="@+id/wordbar"/>
