--- a/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/tool_bar.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/res/layout/tool_bar.xml
@@ -34,6 +34,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingHorizontal="10dp"
                 android:layout_centerInParent="true"
                 android:fontFamily="cursive"
                 android:text="@string/app_name"
